welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:35: error: not found: value H
for( i <- 0 to H-1 )
               ^